[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/themes/TitleTheme.tres" type="Theme" id=1]
[ext_resource path="res://ui/themes/ButtonTheme.tres" type="Theme" id=2]
[ext_resource path="res://screens/StartScreen.gd" type="Script" id=3]

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0862745, 0.207843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.987
margin_left = 256.0
margin_top = 64.0
margin_right = -256.0
margin_bottom = -74.2
theme = ExtResource( 2 )
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 512.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
theme = ExtResource( 1 )
text = "Jargon"
align = 1

[node name="PlayBtn" type="Button" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 512.0
margin_bottom = 226.0
text = "Play"

[node name="HighScoresBtn" type="Button" parent="VBoxContainer"]
margin_top = 236.0
margin_right = 512.0
margin_bottom = 302.0
text = "High Scores"

[node name="OptionsBtn" type="Button" parent="VBoxContainer"]
margin_top = 312.0
margin_right = 512.0
margin_bottom = 378.0
text = "Options"

[node name="SourceCodeBtn" type="Button" parent="VBoxContainer"]
margin_top = 388.0
margin_right = 512.0
margin_bottom = 454.0
text = "Source Code"

[connection signal="button_down" from="VBoxContainer/PlayBtn" to="." method="_on_PlayBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/HighScoresBtn" to="." method="_on_HighScoresBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/OptionsBtn" to="." method="_on_OptionsBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/SourceCodeBtn" to="." method="_on_SourceCodeBtn_button_down"]
