extends Control



func _on_PlayBtn_button_down():
	pass # Replace with function body.


func _on_HighScoresBtn_button_down():
	pass # Replace with function body.


func _on_OptionsBtn_button_down():
	pass # Replace with function body.


func _on_SourceCodeBtn_button_down():
	OS.shell_open("https://github.com/kapflagon/jargon")
